--- a/index.html
+++ b/index.html
@@ -8,55 +8,27 @@
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/js/bootstrap.bundle.min.js"></script>
 <link rel="stylesheet" href="./css/style.css">
 
-    <title>espas game</title>
+    <title>espace game</title>
 </head>
 <body>
-<nav style="height: 50px;" class="navbar " > <div class="container text-center justify-content-center">
+<nav style="height: 60px;" class="navbar " > <div class="container-lg text-center justify-content-center">
     <div class="row">
-      <div class="col border-end">
-        Column
+      <div class="col  border-end">
+        hay moulay abdellah - boujdour 71000
       </div>
       <div class="col border-end">
-        Column
+        services@threeservo.com
       </div>
-      <div class="col">
-        Column
+      <div class="col ">
+        0668067904/0668067904
       </div>
     </div>
   </div></nav>
-    <nav class="navbar navbar-expand-lg sticky-top bg-white text-capitalize shadow">
-        <div class="container">
-          <a class="navbar-brand fonto1" href="#">espas game</a>
-          <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
-            <span class="navbar-toggler-icon"></span>
-          </button>
-          <div class="collapse navbar-collapse " id="navbarSupportedContent">
-            <ul class="navbar-nav me-auto mb-2 mb-lg-0 justify-content-end " >
-              <li class="nav-item">
-                <a class="nav-link  active color2" aria-current="page" href="#">nouveautes</a>
-              </li>
-
-              <li class="nav-item dropdown">
-                <a class="nav-link dropdown-toggle color1 rounded text-white fonto" href="#" role="button" data-bs-toggle="dropdown" aria-expanded="false">
-                    Toutes Catégories
-                </a>
-                <ul class="dropdown-menu">
-                    <li><a class="dropdown-item " href="products/laptop/laptop.html">laptop</a></li>
-                    <li><a class="dropdown-item" href="products/computer/computer.html"> computer</a></li>
-                    <li><a class="dropdown-item" href="products/chaire/chaire.html">chaire</a></li>
-                    <li><a class="dropdown-item" href="products/keyboard/keyboard.html">keyboard</a></li>
-                    <li><a class="dropdown-item" href="products/mouse/mouse.html">mouse</a></li>
-                    <li><a class="dropdown-item" href="products/cartgraphique/cartgraphique.html">cart graphique</a></li>
-                    <li><a class="dropdown-item" href="products/processeur/processeur.html">processeur</a></li>
-                    <li><a class="dropdown-item" href="products/ram/ram.html">ram</a></li>
-                    <li><a class="dropdown-item" href="products/console/console.html">console</a></li>
-                    <li><a class="dropdown-item" href="products/phone/phone.html">phone</a></li>
-                </ul>
-              </li>
-            </ul>
-          </div>
-        </div>
-      </nav>
+<nav class="navbar bg-info bg-body-tertiary">
+  <div class="container justify-content-center text-capitalize">
+    <a class="navbar-brand fonto1 text-white " href="#">espace game</a>
+  </div>
+</nav>
     <div id="carouselExampleSlidesOnly " class="carousel slide" data-bs-ride="carousel">
         <div class="carousel-inner shadow">
           <div class="carousel-item active">
@@ -74,5 +46,65 @@
         </div>
       </div>
 <nav style="height: 100px;"></nav>
+<div class="container ">
+    <div class="row justify-content-center text-center align-items-center g-2 border border-2 border-dark rounded">
+        <div class="col border-end"><img src="https://img.icons8.com/ios-glyphs/60/000000/shipped--v2.png"/><h6 class="color2">Livraison à domicile</h6><p>Partout au Maroc</p></div>
+        <div class="col border-end"><img src="https://img.icons8.com/ios-filled/60/null/headset.png"/><h6 class="color2">Une équipe clientèle</h6><p>À votre écoute</p></div>
+        <div class="col border-end"><img src="https://img.icons8.com/ios-filled/60/null/update-left-rotation.png"/><h6 class="color2">10 ans d'expertise</h6><p>À votre service</p></div>
+        <div class="col border-end"><img src="https://img.icons8.com/ios-glyphs/60/null/get-cash.png"/><h6 class="color2">Paiement</h6 ><p>CIH Bank</p></div>
+        <div class="col "><img src="https://img.icons8.com/ios-filled/60/null/double-tick.png"/><h6 class="color2">+ de 10 000 références</h6 ><p>Choisies par nos experts</p></div>
+    </div>
+</div><nav style="height: 100px;"></nav>
+<div class="container">
+  <div class="row ">
+    <div class="col-6 ">
+      <h5 class="fonto2">nos promos</h5>
+    </div>
+    <div class="col-4 border-bottom">
+      <button id="hiButton" class="btn  btn-lg fonto">Intel</button>
+    </div>
+    <div id="noButton" class="col-2 border-bottom">
+
+<button class="btn btno2  btn-lg fonto">Amd</button>
+    </div>
+  </div>
+</div>
+
+
+</div><nav style="height: 30px;"></nav>
+<div class="container">
+  <div class="row">
+    <div class="col-6">
+      <div class="card">
+        <img src="image1.jpg" class="card-img-top" alt="Card image">
+        <div class="card-body">
+          <h5 class="card-title">Card title</h5>
+          <p class="card-text">Card text</p>
+        </div>
+      </div>
+    </div>
+    <div class="col-6">
+      <div id="hiDiv" class="card">
+        <img  src="./img/images.jpg" class="card-img-top" >
+        <div class="card-body">
+          <h5 class="card-title fonto">Intel</h5>
+          <p class="card-text">Card text</p>
+        </div>
+      </div>
+    </div>
+    <div class="col-6">
+      <div id="noDiv" class="card">
+        <img src="./img/ryzen-gd5acc086f_1280.jpg" class="card-img-top" >
+        <div class="card-body">
+          <h5 class="card-title fonto">Amd</h5>
+          <p class="card-text">Card text</p>
+        </div>
+      </div>
+    </div>
+  </div>
+</div>
+
+
+<script src="./js/js.js"></script>
 </body>
 </html>
