--- a/products/pc.html
+++ b/products/pc.html
@@ -37,8 +37,8 @@
         <div class="container">
             <div class="row justify-content-center align-items-center g-2">
 
-                <div class="col">   <a class="navbar-brand d-md-flex text-white  " style="padding-left: 60px;"><img src="../img/espas.png" alt=""> </a></div>
-                <div class="col"><H4 class="fonto " >ESPACEGAME</H4></div>
+                <div class="col">   <a class="navbar-brand d-md-flex text-white  " style="padding-left: 60px;"><img src="../img/jgkjhgkjgkj.png" alt=""> </a></div>
+                <div class="col"></div>
                 
             </div>
        
