--- a/index.html
+++ b/index.html
@@ -58,7 +58,7 @@
         <div class="container">
             <div class="row justify-content-center align-items-center g-2">
 
-                <div class="col">   <a class="navbar-brand d-md-flex text-white  " style=" height: 120px; height: 120px;"><img src="./img/es2.png" alt=""> </a></div>
+                <div class="col">   <a class="navbar-brand d-md-flex text-white  " style=" height: 120px; height: 120px;" href="./index.html"><img src="./img/es2.png" alt=""> </a></div>
                 <div class="col">
                 
                 </div>
@@ -85,17 +85,16 @@
             <button class="navbar-toggler justify-content-center" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
                 <span class="navbar-toggler-icon"></span>
               </button>
-              <div class="collapse navbar-collapse" id="navbarSupportedContent">
+              <div class="collapse navbar-collapse justify-content-center align-items-center text-center" id="navbarSupportedContent">
                 <ul class="navbar-nav ">
-                    <div class="row g-3 justify-content-center align-items-center text-center">
+                    <div class="row g-3 ">
                         <div class="col-12 col-md-12 col-lg"><div class="dropdown dod ">
                             <button class="btn  dropdown-toggle" type="button" data-bs-toggle="dropdown" aria-expanded="false">
-                              Laptops
+                              Pc portable
                             </button>
                             <ul class="dropdown-menu " style="background-color: #1f1f1f;">
-                              <li class="wwd"><a class="dropdown-item  " href="#">Action</a></li>
-                              <li class="wwd"><a class="dropdown-item  " href="#">Another action</a></li>
-                              <li class="wwd"><a class="dropdown-item  " href="#">Something else here</a></li>
+                              <li class="wwd"><a class="dropdown-item  " href="./products/pcportableworkstation.html">Pc portable workstation</a></li>
+                              <li class="wwd"><a class="dropdown-item  " href="./products/pcportableworkstation.html">Pc portable gamer</a></li>
                             </ul>
                           </div></div>
                           <div class="col-12 col-md-12 col-lg"><div class="dropdown dod ">
@@ -103,19 +102,12 @@
                               composant pc
                             </button>
                             <ul class="dropdown-menu " style="background-color: #1f1f1f;">
-                              <li class="wwd"><a class="dropdown-item  " href="#">Action</a></li>
-                              <li class="wwd"><a class="dropdown-item  " href="#">Another action</a></li>
-                              <li class="wwd"><a class="dropdown-item  " href="#">Something else here</a></li>
-                            </ul>
-                          </div></div>
-                          <div class="col-12 col-md-12 col-lg"><div class="dropdown dod ">
-                            <button class="btn  dropdown-toggle" type="button" data-bs-toggle="dropdown" aria-expanded="false">
-                              Perpherique pc
-                            </button>
-                            <ul class="dropdown-menu " style="background-color: #1f1f1f;">
-                              <li class="wwd"><a class="dropdown-item  " href="#">Action</a></li>
-                              <li class="wwd"><a class="dropdown-item  " href="#">Another action</a></li>
-                              <li class="wwd"><a class="dropdown-item  " href="#">Something else here</a></li>
+                              <li class="wwd"><a class="dropdown-item  " href="./products/pcportableworkstation.html">Boitier gamer</a></li>
+                              <li class="wwd"><a class="dropdown-item  " href="./products/pcportableworkstation.html">Prosseurs</a></li>
+                              <li class="wwd"><a class="dropdown-item  " href="./products/pcportableworkstation.html">Carte mère</a></li>
+                              <li class="wwd"><a class="dropdown-item  " href="./products/pcportableworkstation.html">Carte graphiques</a></li>
+                              <li class="wwd"><a class="dropdown-item  " href="./products/pcportableworkstation.html">ram</a></li>
+                              <li class="wwd"><a class="dropdown-item  " href="./products/pcportableworkstation.html">Ventilateur</a></li>
                             </ul>
                           </div></div>
                           
@@ -124,9 +116,8 @@
                               Pc Espace Game
                             </button>
                             <ul class="dropdown-menu " style="background-color: #1f1f1f;">
-                              <li class="wwd"><a class="dropdown-item  " href="#">Action</a></li>
-                              <li class="wwd"><a class="dropdown-item  " href="#">Another action</a></li>
-                              <li class="wwd"><a class="dropdown-item  " href="#">Something else here</a></li>
+                              <li class="wwd"><a class="dropdown-item  " href="./products/pcportableworkstation.html">Pc gamer Intel</a></li>
+                              <li class="wwd"><a class="dropdown-item  " href="./products/pcportableworkstation.html">Pc gamer ryzen</a></li>
                             </ul>
                           </div></div>
                         <div class="col-12 col-md-12 col-lg"><div class="dropdown dod ">
@@ -134,9 +125,9 @@
                               accessoires
                             </button>
                             <ul class="dropdown-menu " style="background-color: #1f1f1f;">
-                              <li class="wwd"><a class="dropdown-item  " href="#">Action</a></li>
-                              <li class="wwd"><a class="dropdown-item  " href="#">Another action</a></li>
-                              <li class="wwd"><a class="dropdown-item  " href="#">Something else here</a></li>
+                              <li class="wwd"><a class="dropdown-item  " href="./products/pcportableworkstation.html">pate thermique </a></li>
+                              <li class="wwd"><a class="dropdown-item  " href="./products/pcportableworkstation.html">SAC À DOS</a></li>
+                              <li class="wwd"><a class="dropdown-item  " href="./products/pcportableworkstation.html">CABLES</a></li>
                             </ul>
                           </div></div>
                         <div class="col-12 col-md-12 col-lg"><div class="dropdown dod ">
@@ -144,9 +135,9 @@
                               streaming
                             </button>
                             <ul class="dropdown-menu " style="background-color: #1f1f1f;">
-                              <li class="wwd"><a class="dropdown-item  " href="#">Action</a></li>
-                              <li class="wwd"><a class="dropdown-item  " href="#">Another action</a></li>
-                              <li class="wwd"><a class="dropdown-item  " href="#">Something else here</a></li>
+                              <li class="wwd"><a class="dropdown-item  " href="./products/pcportableworkstation.html">CAPTURE CARD</a></li>
+                              <li class="wwd"><a class="dropdown-item  " href="./products/pcportableworkstation.html">MICROPHONES</a></li>
+                              <li class="wwd"><a class="dropdown-item  " href="./products/pcportableworkstation.html">GREEN SCREEN & LIGHTS</a></li>
                             </ul>
                           </div></div>
                           <div class="col-12 col-md-12 col-lg"><div class="dropdown dod ">
@@ -154,9 +145,8 @@
                               mobilier gaming
                             </button>
                             <ul class="dropdown-menu " style="background-color: #1f1f1f;">
-                              <li class="wwd"><a class="dropdown-item  " href="#">Action</a></li>
-                              <li class="wwd"><a class="dropdown-item  " href="#">Another action</a></li>
-                              <li class="wwd"><a class="dropdown-item  " href="#">Something else here</a></li>
+                              <li class="wwd"><a class="dropdown-item  " href="./products/pcportableworkstation.html">chaises gamer</a></li>
+                              <li class="wwd"><a class="dropdown-item  " href="./products/pcportableworkstation.html">bureau gaming</a></li>
                             </ul>
                           </div></div>
                     </div>
