--- a/index.html
+++ b/index.html
@@ -186,7 +186,7 @@
               <img src="./img/Atlas-Gaming-AMD-Ryzen-9-7950X-A.jpg (2).webp" class="card-img-top" alt="Card image">
               <div class="card-body">
                 <h5 class="card-title">Card title</h5>
-                <a class="btn btn-primary" href="#" role="button">commander</a>
+                <a class="btn btn-primary" href="./products/pc.html" role="button">commander</a>
               </div>
             </div>
           </div>
@@ -195,7 +195,7 @@
               <img src="./img/Atlas-Gaming-Asus-GeForce-GT-710-2-SL-A.jpg" class="card-img-top" alt="Card image">
               <div class="card-body">
                 <h5 class="card-title">Card title</h5>
-                <a class="btn btn-primary" href="#" role="button">commander</a>
+                <a class="btn btn-primary" href="./products/pc.html" role="button">commander</a>
               </div>
             </div>
           </div>
@@ -204,7 +204,7 @@
               <img src="./img/Atlas-Gaming-HyperX-Cloud-II-Red-A.jpg.webp" class="card-img-top" alt="Card image">
               <div class="card-body">
                 <h5 class="card-title">Card title</h5>
-                <a class="btn btn-primary" href="#" role="button">commander</a>
+                <a class="btn btn-primary" href="./products/pc.html" role="button">commander</a>
               </div>
             </div>
           </div>
@@ -213,7 +213,7 @@
               <img src="./img/Atlas-Gaming-Intel-Core-i7-13700KF-A.jpg.webp" class="card-img-top" alt="Card image">
               <div class="card-body">
                 <h5 class="card-title">Card title</h5>
-                <a class="btn btn-primary" href="#" role="button">commander</a>
+                <a class="btn btn-primary" href="./products/pc.html" role="button">commander</a>
               </div>
             </div>
           </div>
@@ -222,7 +222,7 @@
               <img src="./img/Atlas-Gaming-MSI-PRO-MP241X-A.jpg.webp" class="card-img-top" alt="Card image">
               <div class="card-body">
                 <h5 class="card-title">Card title</h5>
-                <a class="btn btn-primary" href="#" role="button">commander</a>
+                <a class="btn btn-primary" href="./products/pc.html" role="button">commander</a>
               </div>
             </div>
           </div>
@@ -231,7 +231,7 @@
               <img src="./img/Atlas-Gaming-Razer-Tomahawk-A1-Mid-Tower-A.jpg.webp" class="card-img-top" alt="Card image">
               <div class="card-body">
                 <h5 class="card-title">Card title</h5>
-                <a class="btn btn-primary" href="#" role="button">commander</a>
+                <a class="btn btn-primary" href="./products/pc.html" role="button">commander</a>
               </div>
             </div>
           </div>
@@ -239,7 +239,7 @@
       </div>
       <nav style="height: 50px;"></nav>
       <div class="container">
-        <h3 style="color: #15c31e;">PRODUITS POPULAIRES <a href="#">Voir Plus Ici</a></h3>
+        <h3 style="color: #15c31e;">PRODUITS POPULAIRES <a href="./products/pc.html">Voir Plus Ici</a></h3>
       </div>
       <nav style="height: 10px;"></nav>
       <div class="container">
@@ -249,7 +249,7 @@
               <img src="./img/Atlas-Gaming-Asus-GeForce-GT-710-2-SL-A.jpg" class="card-img-top" alt="Card image">
               <div class="card-body">
                 <h5 class="card-title">Card title <span class="badge rounded-pill text-bg-danger">exclusive</span></h5>
-                <a class="btn btn-primary" href="#" role="button">commander</a>
+                <a class="btn btn-primary" href="./products/pc.html" role="button">commander</a>
               </div>
             </div>
           </div>
@@ -258,7 +258,7 @@
               <img src="./img/Atlas-Gaming-Gigabyte-AORUS-GeForce-RTX-3090-Ti-XTREME-WATERFORCE-24G-A.jpg.webp" class="card-img-top" alt="Card image">
               <div class="card-body">
                 <h5 class="card-title">Card title <span class="badge rounded-pill text-bg-primary">New!</span></h5>
-                <a class="btn btn-primary" href="#" role="button">commander</a>
+                <a class="btn btn-primary" href="./products/pc.html" role="button">commander</a>
               </div>
             </div>
           </div>
@@ -267,7 +267,7 @@
               <img src="./img/Atlas-Gaming-Gigabyte-GeForce-RTX-3050-EAGLE-OC-8G-LHR-A.jpg.webp" class="card-img-top" alt="Card image">
               <div class="card-body">
                 <h5 class="card-title">Card title</h5>
-                <a class="btn btn-primary" href="#" role="button">commander</a>
+                <a class="btn btn-primary" href="./products/pc.html" role="button">commander</a>
               </div>
             </div>
           </div>
@@ -276,7 +276,7 @@
               <img src="./img/Atlas-Gaming-Gigabyte-GeForce-RTX-3070-GAMING-OC-8G-A.jpg" class="card-img-top" alt="Card image">
               <div class="card-body">
                 <h5 class="card-title">Card title</h5>
-                <a class="btn btn-primary" href="#" role="button">commander</a>
+                <a class="btn btn-primary" href="./products/pc.html" role="button">commander</a>
               </div>
             </div>
           </div>
@@ -285,7 +285,7 @@
               <img src="./img/Atlas-Gaming-PNY-GeForce-RTX-3050-8GB-XLR8-Gaming-REVEL-EPIC-X-RGB-A-600x600.jpg.webp" class="card-img-top" alt="Card image">
               <div class="card-body">
                 <h5 class="card-title">Card title</h5>
-                <a class="btn btn-primary" href="#" role="button">commander</a>
+                <a class="btn btn-primary" href="./products/pc.html" role="button">commander</a>
               </div>
             </div>
           </div>
@@ -294,7 +294,7 @@
               <img src="./img/Atlas-Gaming-Asus-EKWB-GeForce-RTX-3090-24GB-A.jpg.webp" class="card-img-top" alt="Card image">
               <div class="card-body">
                 <h5 class="card-title">Card title</h5>
-                <a class="btn btn-primary" href="#" role="button">commander</a>
+                <a class="btn btn-primary" href="./products/pc.html" role="button">commander</a>
               </div>
             </div>
           </div>
