--- a/index.html
+++ b/index.html
@@ -339,7 +339,7 @@
       </nav>
       <nav style="height: 50px; background-color: black;" ></nav>
       <nav style="background-color: black;"  > <div class="container">
-        <div class="text-white border-top border-success">allrights to espace game</div>
+        <div class="text-white border-top border-success">2022 © Atlas Gaming - All Rights Reserved</div>
       </div></nav>
   </footer>
 </body>
